--- a/main.html
+++ b/main.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Заголовок страницы</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div id="ground">
-        <audio src="./sound/sound.mp3" autoplay id="aud"></audio>
+        <audio src="./sound.mp3" autoplay id="aud"></audio>
     <div id="layer">
     <div class="supp">
         <h2 id="text">Оставить жалобу</h2>
@@ -16,6 +16,6 @@
     </div>
     </div>
     </div>
-    <script src="./java/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
